# discord-mcp

./: .env.example  CLAUDE.md  Discord MCP Server API仕様書.md  Discord MCP Server.md  Dockerfile  LICENSE  README.md  __init__.py  config.py  project_structure.txt  pyproject.toml  server.py  test_server.py  todo.md
.github/workflows/: claude.yml  docker.yml  lint.yml  release.yml
src/discord_mcp/: __init__.py  discord.py  env.py  models.py  server.py  templates.py
src/discord_mcp_server/: config.py  discord_client.py  server.py
tests/: test_server.py
