[project]
name = "discord-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server that integrates with Discord."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "click>=8.1.7",
  "discord-py>=2.5.2",
  "mcp>=1.0.0",
  "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
discord-mcp = "discord_mcp.__init__:main"

[tool.ruff]
target-version = "py313"
line-length = 88
indent-width = 4

[tool.ruff.format]
indent-style = "space"
